<?xml version="1.0"?>
<package format="2">
  <name>pi_rover</name>
  <version>0.0.0</version>
  <description>A package for controlling a raspberry pi powered rover.</description>

  <maintainer email="jmbillson@outlook.com">Joshua Billson</maintainer>

  <license>MIT</license>

  <author email="jmbillson@outlook.com">Joshua Billson</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>vnh5019_motor_controller</build_depend>
  
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>vnh5019_motor_controller</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>vnh5019_motor_controller</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
